--- a/index.html
+++ b/index.html
@@ -2,5 +2,6 @@
 <html lang="en">
   <body>
     <h1>Coming Soon!</h1>
+    <h2>Future Home of Sylvia the Songbird, authored by Lindsey Scholl</h2>
   </body>
 </html>
