--- a/index.html
+++ b/index.html
@@ -3,5 +3,8 @@
   <body>
     <h1>Coming Soon!</h1>
     <h2>Future Home of Sylvia the Songbird, authored by Lindsey Scholl</h2>
+    <div class="col-sm-12 col-md-6 col-lg-6 mt-3">
+          <img src="sylvia.jpg" class="img-fluid" alt="Sylvia the Songbird" style="width: 500px;height: 250px;">
+        </div>
   </body>
 </html>
