--- a/index.html
+++ b/index.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-  <body>
+<head>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Lindsey Scholl | Sylvia the Songbird</title>
+</head>
+<body>
     <!--h1>Coming Soon!</h1>
     <h2>Future Home of Sylvia the Songbird, authored by Lindsey Scholl</h2-->
     <div class="col-sm-12 col-md-6 col-lg-6 mt-3">
           <img src="sylvia.jpg" class="img-fluid" alt="Sylvia the Songbird">
         </div>
-  </body>
+</body>
 </html>
