--- a/index.html
+++ b/index.html
@@ -7,6 +7,23 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" 
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"> 
   <title>Lindsey Scholl | Sylvia the Songbird</title>
+  <meta name="keywords" content="Lindsey Scholl, Sylvia the Songbird, Children's book">
+  <meta name="author" content="Lindsey Scholl">
+  <meta name="twitter:card" content="summary"></meta>
+  <title>Lindsey Scholl | Sylvia the Songbird</title>
+  <link rel="icon" type="image/x-icon" href="images/sylvia.png">
+  <link rel="apple-touch-icon" href="images/QEIicon.png" />
+  <meta property="og:image" content=""/>
+  <meta property="og:title" content="Residential Electrician | QEI Electrical | Cincinnati, OH"/>
+  <meta property="og:site_name" content="QEI Electrical Services"/>
+  <meta property="og:type" content="website"/>
+  <meta property="og:image" content="images/drill.jpg"/>
+  <meta property="og:url" content="https://qeielectrical.com"/>
+  <meta property="og:description" content="QEI Electrical Services is your local electrician with 11 years of experience & training. 
+    Call today for electrical installation or repair!"/>
+  <meta name="description" itemprop="description" content="QEI Electrical Services is your local electrician with 11 years of experience 
+    and training. Call today for electrical installation or repair!" />
+  <link rel="canonical" href="https://qeielectrical.com" />
 </head>
 <body>
     <!--h1>Coming Soon!</h1>
