--- a/index.html
+++ b/index.html
@@ -11,19 +11,17 @@
   <meta name="author" content="Lindsey Scholl">
   <meta name="twitter:card" content="summary"></meta>
   <title>Lindsey Scholl | Sylvia the Songbird</title>
-  <link rel="icon" type="image/x-icon" href="images/sylvia.png">
-  <link rel="apple-touch-icon" href="images/QEIicon.png" />
+  <link rel="icon" type="image/x-icon" href="sylviafav.png">
+  <link rel="apple-touch-icon" href="sylviafav.png" />
   <meta property="og:image" content=""/>
-  <meta property="og:title" content="Residential Electrician | QEI Electrical | Cincinnati, OH"/>
-  <meta property="og:site_name" content="QEI Electrical Services"/>
+  <meta property="og:title" content="Lindsey Scholl | Sylvia the Songbird"/>
+  <meta property="og:site_name" content="Lindsey Scholl"/>
   <meta property="og:type" content="website"/>
-  <meta property="og:image" content="images/drill.jpg"/>
-  <meta property="og:url" content="https://qeielectrical.com"/>
-  <meta property="og:description" content="QEI Electrical Services is your local electrician with 11 years of experience & training. 
-    Call today for electrical installation or repair!"/>
-  <meta name="description" itemprop="description" content="QEI Electrical Services is your local electrician with 11 years of experience 
-    and training. Call today for electrical installation or repair!" />
-  <link rel="canonical" href="https://qeielectrical.com" />
+  <meta property="og:image" content="sylvia.jpg"/>
+  <meta property="og:url" content="https://lindseyscholl.com"/>
+  <meta property="og:description" content="Sylvia the Songbird authored by Lindsey Scholl"/>
+  <meta name="description" itemprop="description" content="Sylvia the Songbird authored by Lindsey Scholl" />
+  <link rel="canonical" href="https://lindseyscholl.com" />
 </head>
 <body>
     <!--h1>Coming Soon!</h1>
