--- a/index.html
+++ b/index.html
@@ -24,6 +24,31 @@
   <link rel="canonical" href="https://lindseyscholl.com" />
 </head>
 <body>
+  
+  <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
+  <div class="container-fluid">
+          <a class="navbar-brand" href="index">
+            <img src="images/sylviafav.png" alt="Sylvia the Songbird" width="30" height="24">
+            Lindsey Scholl
+            </a>
+
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+
+          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav mx-auto">
+              <a class="nav-link active text-primary" aria-current="page" href="index">Home</a>
+              <a class="nav-link" href="electrical-repair">Children's Book</a>
+              <a class="nav-link" href="electrical-installation">Electrical Installation</a>
+              <a class="nav-link" href="smart-home-upgrades">Smart Home Upgrades</a>
+              <a class="nav-link" href="pools-and-hot-tubs">Pool Lighting</a>   
+              <a class="btn btn-outline-primary" href="tel:5132065816" role="button">(513) 206-5816</a>       
+            </div>
+          </div>
+    
+    </div>
+    </nav>
     <!--h1>Coming Soon!</h1>
     <h2>Future Home of Sylvia the Songbird, authored by Lindsey Scholl</h2-->
     <div class="col-sm-12 col-md-6 col-lg-6 mt-3">
