--- a/index.html
+++ b/index.html
@@ -4,15 +4,18 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" 
-    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"> 
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" 
+  integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous"> 
   <title>Lindsey Scholl | Sylvia the Songbird</title>
   <meta name="keywords" content="Lindsey Scholl, Sylvia the Songbird, Children's book">
   <meta name="author" content="Lindsey Scholl">
   <meta name="twitter:card" content="summary"></meta>
   <title>Lindsey Scholl | Sylvia the Songbird</title>
-  <link rel="icon" type="image/x-icon" href="sylviafav.png">
-  <link rel="apple-touch-icon" href="sylviafav.png" />
+  <link rel="icon" type="image/x-icon" href="images/favicon.ico">
+  <link rel="apple-touch-icon" href="images/apple-touch-icon.png" />
+  <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
+  <link rel="manifest" href="/images/site.webmanifest">
   <meta property="og:image" content=""/>
   <meta property="og:title" content="Lindsey Scholl | Sylvia the Songbird"/>
   <meta property="og:site_name" content="Lindsey Scholl"/>
@@ -27,8 +30,8 @@
   
   <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
-          <a class="navbar-brand" href="index">
-            <img src="images/sylviafav.png" alt="Sylvia the Songbird" width="30" height="24">
+          <a class="navbar-brand" href="index.html">
+            <img src="images/favicon.ico" alt="Sylvia the Songbird" width="30" height="24">
             Lindsey Scholl
             </a>
 
@@ -38,22 +41,19 @@
 
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav mx-auto">
-              <a class="nav-link active text-primary" aria-current="page" href="index">Home</a>
-              <a class="nav-link" href="electrical-repair">Children's Book</a>
-              <a class="nav-link" href="electrical-installation">Electrical Installation</a>
-              <a class="nav-link" href="smart-home-upgrades">Smart Home Upgrades</a>
-              <a class="nav-link" href="pools-and-hot-tubs">Pool Lighting</a>   
-              <a class="btn btn-outline-primary" href="tel:5132065816" role="button">(513) 206-5816</a>       
+              <a class="nav-link active text-primary" aria-current="page" href="index.html">Home</a>
+              <a class="nav-link" href="book.html">Children's Book</a>
+              <!--a class="nav-link" href="music">Music</a-->
+              <a class="nav-link" href="about.html">About</a>    
+              <!--a class="nav-link" href="contact">Contact</a-->    
             </div>
           </div>
     
     </div>
     </nav>
-    <!--h1>Coming Soon!</h1>
-    <h2>Future Home of Sylvia the Songbird, authored by Lindsey Scholl</h2-->
     <div class="col-sm-12 col-md-6 col-lg-6 mt-3">
-          <img src="sylvia.jpg" class="img-fluid" alt="Sylvia the Songbird" style="width: 500px;height: 500px;">
+          <img src="images/sylvia.jpg" class="img-fluid" alt="Sylvia the Songbird" style="width: 500px;height: 500px;">
         </div>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-</body>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" 
+integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script></body>
 </html>
