--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
   <meta name="author" content="Lindsey Scholl">
   <meta name="twitter:card" content="summary"></meta>
   <title>Lindsey Scholl | Sylvia the Songbird</title>
-  <link rel="icon" type="image/x-icon" href="images/favicon.ico">
-  <link rel="apple-touch-icon" href="images/apple-touch-icon.png" />
-  <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
-  <link rel="manifest" href="/images/site.webmanifest">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="apple-touch-icon" href="apple-touch-icon.png" />
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+  <link rel="manifest" href="site.webmanifest">
   <meta property="og:image" content=""/>
   <meta property="og:title" content="Lindsey Scholl | Sylvia the Songbird"/>
   <meta property="og:site_name" content="Lindsey Scholl"/>
@@ -31,7 +31,7 @@
   <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
           <a class="navbar-brand" href="index.html">
-            <img src="images/favicon.ico" alt="Sylvia the Songbird" width="30" height="24">
+            <img src="favicon.ico" alt="Sylvia the Songbird" width="30" height="24">
             Lindsey Scholl
             </a>
 
@@ -52,7 +52,7 @@
     </div>
     </nav>
     <div class="col-sm-12 col-md-6 col-lg-6 mt-3">
-          <img src="images/sylvia.jpg" class="img-fluid" alt="Sylvia the Songbird" style="width: 500px;height: 500px;">
+          <img src="sylvia.jpg" class="img-fluid" alt="Sylvia the Songbird" style="width: 500px;height: 500px;">
         </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" 
 integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script></body>
