--- a/index.html
+++ b/index.html
@@ -27,17 +27,17 @@
 
     <div class="container">
         <h1 class="logo cursive">
-            Sssoon
+            Lindsey Scholl
         </h1>
 <!--  H1 can have 2 designs: "logo" and "logo cursive"           -->
         
         <div class="content">
-            <h4 class="motto">Find the best Bootstrap 3 freebies and themes on the web.</h4>
-            <div class="subscribe">
+            <!--h4 class="motto">Find the best Bootstrap 3 freebies and themes on the web.</h4-->
+            <!--div class="subscribe">
                 <h5 class="info-text">
                     Join the waiting list for the beta. We keep you posted. 
-                </h5>
-                <div class="row">
+                </h5-->
+                <!--div class="row">
                     <div class="col-md-4 col-md-offset-4 col-sm6-6 col-sm-offset-3 ">
                         <form class="form-inline" role="form">
                           <div class="form-group">
@@ -49,12 +49,12 @@
 
                     </div>
                 </div>
-            </div>
+            </div-->
         </div>
     </div>
     <div class="footer">
       <div class="container">
-             Made with <i class="fa fa-heart heart"></i> by <a href="http://www.creative-tim.com">Creative Tim</a>. Free download <a href="http://www.creative-tim.com/product/coming-sssoon-page">here.</a>
+             Made with <i class="fa fa-heart heart"></i> by <a href="http://www.creative-tim.com">William</a>. 
       </div>
     </div>
  </div>
