--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     </div>
     <div class="footer">
       <div class="container">
-             Made with <i class="fa fa-heart heart"></i> by <a href="http://www.creative-tim.com">William</a>. 
+             Made with <i class="fa fa-heart heart"></i> by William. 
       </div>
     </div>
  </div>
