--- a/index.html
+++ b/index.html
@@ -61,5 +61,6 @@
  </body>
    <script src="js/jquery-1.10.2.js" type="text/javascript"></script>
    <script src="js/bootstrap.min.js" type="text/javascript"></script>
+	<script src="https://kit.fontawesome.com/1b1a76bb5f.js" crossorigin="anonymous"></script>
 
 </html>
