--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         </div>
     </div>
     <div class="footer">
-		<a href="url">lindseyscholl.com/test.html</a>
+		<a href="test.html">link</a>
       <div class="container">
              Made with <i class="fa fa-heart heart"></i> by William. 
       </div>
